# ChangeLog for net-news/liferea
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-news/liferea/ChangeLog,v 1.185 2010/03/05 04:56:02 vostorga Exp $

  05 Mar 2010; Víctor Ostorga <vostorga@gentoo.org> liferea-1.4.15.ebuild:
  Removing www-client/seamonkey dependency because of seamonkey-1* removal,
  bug 300458

*liferea-1.7.3 (25 Jan 2010)

  25 Jan 2010; Víctor Ostorga <vostorga@gentoo.org> +liferea-1.7.3.ebuild:
  Version bump upstream unstable version to 1.7.3 , bug #301994

*liferea-1.7.2 (23 Jan 2010)
*liferea-1.6.2 (23 Jan 2010)

  23 Jan 2010; Víctor Ostorga <vostorga@gentoo.org>
  -files/liferea-1.1.0-libnotify.patch, -liferea-1.2.23-r1.ebuild,
  -files/liferea-1.2.23-backup-perms.patch, -liferea-1.4.23.ebuild,
  -files/liferea-1.4.23-gecko.patch, -liferea-1.4.24.ebuild,
  -liferea-1.4.28.ebuild, -liferea-1.6.0.ebuild, +liferea-1.6.2.ebuild,
  +liferea-1.7.2.ebuild:
  Cleaning out old ebuilds, Version bump of upstream stable 1.6.2 and
  unstable 1.7.2

  25 Dec 2009; Raúl Porcel <armin76@gentoo.org> liferea-1.6.0.ebuild,
  liferea-1.7.1.ebuild:
  Add ~sparc wrt #279241

  09 Dec 2009; Brent Baude <ranger@gentoo.org> liferea-1.4.28-r1.ebuild:
  Marking liferea-1.4.28-r1 ppc64 for bug 282801

*liferea-1.7.1 (23 Oct 2009)

  23 Oct 2009; Patrick Lauer <patrick@gentoo.org> +liferea-1.7.1.ebuild:
  Bump, small dep fixups. Closes #289753

  19 Oct 2009; Daniel Gryniewicz <dang@gentoo.org> metadata.xml:
  Change to maintainer-needed

  02 Oct 2009; Mounir Lamouri <volkmar@gentoo.org> liferea-1.6.0.ebuild:
  Keywording for ppc, bug 279241

  20 Sep 2009; nixnut <nixnut@gentoo.org> liferea-1.4.28-r1.ebuild:
  ppc stable #282801

  06 Sep 2009; Markus Meier <maekke@gentoo.org> liferea-1.4.28-r1.ebuild:
  amd64/x86 stable, bug #282801

  26 Aug 2009; Daniel Gryniewicz <dang@gentoo.org> liferea-1.2.23-r1.ebuild,
  liferea-1.4.15.ebuild, liferea-1.4.23.ebuild, liferea-1.4.24.ebuild,