@@ -8,17 +8,17 @@ DIST liferea-1.7.1.tar.gz 1552448 RMD160 ba401dd53fb5738196782cfcaa7a110f6b496c9
 DIST liferea-1.7.2.tar.gz 1732643 RMD160 83d63904c7a568f4c0a384760dcf01c8a29edf9b SHA1 1625107565b61957f188baacaee5a2318d4f4da9 SHA256 2f668adfd92fe94024c94f8bc87d1d273ef12bcad9730963abfdf0e17dae2528
 DIST liferea-1.7.3.tar.gz 1758998 RMD160 2b61653321634adbde8987a666f7a165d1b8fac9 SHA1 8195926787ce32b1837bf14ab10723f3ef0f8e93 SHA256 c791d88bf72a7a69028d005b72f52ff1f7466184972434f55583c87f3d22cbe7
 EBUILD liferea-1.4.15.ebuild 2536 RMD160 e3a3da3d8b99b3877e98c3cdb3afb962c75a6f04 SHA1 78d951be1f99f455aa0c42cf6a7c0da2b4439a1b SHA256 e480568664c8377a6c020dcd955efdc2b2e073b825350c5e7a2c5adb4367977f
-EBUILD liferea-1.4.28-r1.ebuild 2683 RMD160 f7f79fa5c94ffd84df93e9aebd02c4dd8b6fddc5 SHA1 22676cb1e420f0ddea2779fbcfe532478f5b655d SHA256 cdf8ad017ef0a3b10c61688b986ee55eb5309b958534f7076b5eacefe4159b1f
+EBUILD liferea-1.4.28-r1.ebuild 2667 RMD160 1e31907b86bc0e81705630f77793fc987cbc6425 SHA1 9cd22f55eab11afe25db450a05a3c4c2854ca234 SHA256 ebe057a295313389be07dbed79efb2dc6f22717d34e93a159e7c2cd94d5c0916
 EBUILD liferea-1.6.2.ebuild 1342 RMD160 1b3fbece686be50ba3dc639f60a5a5d92d36c009 SHA1 b4abc58ac2e69b973246768bba992d525d318029 SHA256 874e8aec68f929fd0d2dc0651cffd49f6092a3a11154c0bb0508c4145c521c8e
 EBUILD liferea-1.7.1.ebuild 1291 RMD160 1bd7f81002dc3e86c713c7dcf9ecd7fe486b0566 SHA1 418c025640e0736f991a4f4de8a5295ac25ed42b SHA256 08cc264898bde4bc12ab642c534f6a9116d2a6d516b6a9cac8c3f89e7a8d55a2
 EBUILD liferea-1.7.2.ebuild 1288 RMD160 bff205a10f32ace43cb2553d82bea69036ad7705 SHA1 a1866e1729f4f1b99ad0ebb40a38aba99b648c63 SHA256 8f3e883af1d5b8d8c6a1c4ffa4113d7ed2dbb974bda53ad995cea3ffc2376865
 EBUILD liferea-1.7.3.ebuild 1263 RMD160 d101fc2775eb77d00b3468c3d324f5ece19c191e SHA1 38a6c046cc67acc299e32e6f8d685528837b4a8f SHA256 f77dea6ad239e709f1b979afee38838b9cfa8a08b6fdb726b3100b2ef8c2669e
-MISC ChangeLog 51982 RMD160 8a7c3ccbe221319142dbf49d77c9d16da1efbedc SHA1 aa4d8df8077e1254d6c8660c99d752da5d4343a5 SHA256 a471cb0bf2ec60bc80d9930fe10c128a98347effb98a73750dbd651cbada3412
+MISC ChangeLog 52102 RMD160 107e85b99c85c9bf46c1d24c1a5b500ea761442c SHA1 0b152246787a125b5ed52cd5e57f28b3060eedaf SHA256 9cc344bdf023b24b62d1920de487e108b6c63b0646c8c63e8e36316d480dceeb
 MISC metadata.xml 1157 RMD160 7a060a412058565f837057e076de78d8840b6786 SHA1 e0ff2e8bd193992ecb312f388237e74205a1cccd SHA256 3e4d3afd173268a39276b75c24f8120d7109646983a9f34d28cd45f57419913e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAkuZceoACgkQdz7hIScOURE5UwCeLOe2heCKNyD1kc4bL390ZEid
-y24AoJYcogc9GEEE6yGIjabDHlAr99bK
-=ZVAL
+iEYEARECAAYFAkun3EUACgkQCaWpQKGI+9Tl6wCfTQwzI5KD2K6fb78bWVR9eeZQ
+RfwAniWyI+qDNrRYcWWDkBQ2tYm115ry
+=hrra
 -----END PGP SIGNATURE-----
