@@ -1,6 +1,9 @@
 # ChangeLog for net-news/liferea
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-news/liferea/ChangeLog,v 1.185 2010/03/05 04:56:02 vostorga Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-news/liferea/ChangeLog,v 1.186 2010/03/22 21:08:15 pacho Exp $
+
+  22 Mar 2010; Pacho Ramos <pacho@gentoo.org> liferea-1.4.28-r1.ebuild:
+  Drop all 'seamonkey' references, see bug 300458
 
   05 Mar 2010; Víctor Ostorga <vostorga@gentoo.org> liferea-1.4.15.ebuild:
   Removing www-client/seamonkey dependency because of seamonkey-1* removal,
